# slam

./: .gitignore  CMakeLists.txt  ErrorNote  Makefile  gittest.txt  main.cpp  main.h  realtime.sh
config/: 8192014  coeffs.txt  coeffs98.txt  config  gravity.txt  july2014  rviz_display.rviz
include/: Quaternion.hpp  Sensor.hpp  Sensors.hpp  arc.hpp  config.hpp  feature.h  featureIO.h  imagesensor.hpp  slamsensor.hpp  states.h  view.hpp
matlab/: func_Euler2quaternion.m  func_JacobianH.m  func_measurementModel.m  func_motionModel.m  func_quaternion2Euler.m  func_quaternion2Rotation.m  matlab2txt.m  matlab2txt2.m  run_hongbin140610.m  slam.m
src/: Quaternion.cpp  Quaternion.hpp  Sensors.cpp  Sensors.hpp  feature.cpp  feature.h  featureIO.cpp  featureIO.h  features.cpp  features.h  imagesensor.cpp  imagesensor.hpp  main.cpp  main.h  states.cpp  states.h  view.cpp  view.hpp
src/ARC/: Makefile  Quaternion.cpp  Sensors.cpp  arc.cpp  feature.cpp  featureIO.cpp  imagesensor.cpp  slamsensor.cpp  states.cpp  view.cpp
src/downsample/: Makefile  downsample.py
src/euler2qbw/: Makefile  Mquat.txt  README  euler.txt  euler2qbw.cpp  test.sh
src/getdt/: Makefile  getdt.awk
src/gps2xyz/: Makefile  main.cpp
src/gps2xyz/matlab/: getSphericalLatitude.m  plotGPS.m  test_GPS_JY.m
src/img2body/: Makefile  Matout.txt  Quaternion.hpp  README  img2body.cpp  pixels.txt  test.sh
src/lpf/: Makefile  README  fir.cpp  lpf.cpp
src/makemap/: Makefile  makemap.sh
src/mean/: Makefile  mean.awk
src/multitap/: Makefile  README  main.cpp
src/quatKF/: quatKF.py  sensors.py
src/realtime/: realtime.sh
src/rmbias/: Makefile  rmbias.awk
src/rotate/: Makefile  README  main.cpp  test.sh
src/rotate/testing/: acc  acc.rot  testout
src/sensor_emu/: Makefile  main.c  ourerr.c
src/sensor_emu_stamp_feature/: Makefile  stamp.cpp
src/slam/: Makefile  Sensors.hpp  featureIO.cpp  imagesensor.hpp  main.cpp  main.h  ourerr.cpp  ourerr.hpp  states.cpp  states.h
src/wrap/: Makefile  wrap.awk
